Fixat spacer och toolbar-menu och stylat content-items samt wrappat dem i mat-card. Lagt till exempel  på menu-items i ny toolbar.

--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -12,7 +12,7 @@
 }
 
 .flex-item {
-  width: 200px;
+  width: 158px;
   height: 150px;
   margin-top: 5px;
   background: tomato;
