--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -23,4 +23,8 @@
   .router-wrapper  {
     margin: 46px;
   }
+  .checkbox-workout {
+    display: flex;
+    flex-flow: column wrap;
+  }
 }
